@@ -7,6 +7,6 @@
 
 #include <sys/types.h>
 #include <sys/time.h>
-extern int select();
+extern int select(int,fd_set *,fd_set *,fd_set *,struct timeval *);
 
 #endif
