@@ -1,3 +1,10 @@
+  * alloc.h, buffer.c, buffer.h, buffer_get.c, buffer_put.c, buffer_write.c,
+    byte.h, check-udpsvd.c, ipsvd_phcc.c, pathexec_env.c, select.h1,
+    select.h2, sig.c, sig.h, sig_catch.c, socket_bind.c, socket_conn.c,
+    tcpsvd.c, tcpsvd.dist, udpsvd.c, udpsvd.dist, wait.h: fix build with
+    gcc15: in C23 f() means f(void), consequently signal handler functions
+    now are f(int), alloc_free() and byte_zero() parameters need casts,
+    buffer_unixwrite() removes "const" from parameter.
   * src/Makefile: target check depends on target default now.
   * doc/index.html: remove reference to mailing list misc@list.smarden.org.
   * doc/index.html: add reference to repository on github.com.
